fixed contact us positioning bug, also fixed a bug with the navbar shrinking in height too much at smaller viewport heights

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
     position: relative;
 }
 
+div.page {
+    margin-top: 4rem;
+}
+
 /* navbar styles */
 
 nav {
@@ -23,11 +27,13 @@ nav {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    min-height: 7vh;
+    min-height: 4rem;
     height: fit-content;
     padding: 0 1.5rem 0 1.5rem;
     background-color: #203A6C;
     transition: opacity 500ms ease-in-out;
+    position: fixed;
+    z-index: 2;
 }
 
 .logo {
@@ -1429,18 +1435,26 @@ div.name-grid > div.name-title-container:hover {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
 }
 
+div.modal-container {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+}
+
 div.contact-modal {
     display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     position: absolute;
-    top: 50%;  
-    left: 50%; 
-    transform: translate(-50%, -50%);
     z-index: 999;
-    width: 65vw;
-    height: 45vh;
+    width: 58rem;
+    height: 26rem;
+    min-height: fit-content;
     max-width: 60rem;
     text-align: center;
     padding: 1rem;
